--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,5 +6,5 @@ fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
 user:
-    resource: "@UserBundle/Controller"
-    type:     annotation
+    resource: @UserBundle/Resources/config/routing.yml
+    prefix: /
