detail absence + validation

--- a/src/BirdOffice/UserBundle/Resources/config/routing.yml
+++ b/src/BirdOffice/UserBundle/Resources/config/routing.yml
@@ -55,3 +55,15 @@ addNewDay:
     defaults: { _controller: UserBundle:Ajax:AddNewDayAjax }
     options:
         expose: true
+
+ModalDetailContent:
+    path:   /ModalDetailContent
+    defaults: { _controller: UserBundle:Ajax:ModalDetailContent }
+    options:
+        expose: true
+
+validationAjax:
+    path:   /validationAjax
+    defaults: { _controller: UserBundle:Ajax:ValidationAjax }
+    options:
+        expose: true
