--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,3 +8,6 @@ fos_user:
 user:
     resource: @UserBundle/Resources/config/routing.yml
     prefix: /
+
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
