--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "jms/twig-js": "dev-master",
         "jms/twig-js-bundle": "dev-master",
         "leafo/lessphp": "dev-master",
-        "friendsofsymfony/jsrouting-bundle": "^1.6"
+        "friendsofsymfony/jsrouting-bundle": "^1.6",
+        "twig/extensions": "^1.3"
 
 
     },
