--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,7 +6,7 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: fr
 
 framework:
     #esi:             ~
@@ -105,3 +105,4 @@ fos_user:
 services:
     fos_user.doctrine_registry:
         alias: doctrine
+
