--- a/src/BirdOffice/UserBundle/Resources/config/routing.yml
+++ b/src/BirdOffice/UserBundle/Resources/config/routing.yml
@@ -98,3 +98,7 @@ editDay:
     options:
         expose: true
 
+google:
+    path:   /google
+    defaults: { _controller: UserBundle:Default:Google }
+
