--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "jms/twig-js-bundle": "dev-master",
         "leafo/lessphp": "dev-master",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
-        "twig/extensions": "^1.3"
+        "twig/extensions": "^1.3",
+        "hwi/oauth-bundle": "^0.4.0"
 
 
     },
