--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,10 @@
     "license": "proprietary",
     "type": "project",
     "autoload": {
-        "psr-4": {
-            "": "src/"
-        }
-    },
+    "psr-0": {
+    "": "src/", "SymfonyStandard": "app/"
+    }
+},
     "require": {
         "php": ">=5.3.9",
         "symfony/symfony": "2.8",
@@ -24,9 +24,6 @@
         "leafo/lessphp": "dev-master",
         "friendsofsymfony/jsrouting-bundle": "^1.6",
         "twig/extensions": "^1.3",
-        "hwi/oauth-bundle": "^0.4.0"
-
-
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
